# lox-rust

./: Cargo.toml
loxrust/: Cargo.toml
loxrust/res/: closure-broken-test.lox  closure-test.lox  return-test.lox
loxrust/src/: main.rs
loxrustlib/: Cargo.toml
loxrustlib/src/: callable.rs  environment.rs  err.rs  expr.rs  interpreter.rs  lib.rs  outcome.rs  parser.rs  printer.rs  resolver.rs  scan.rs  stmt.rs  token.rs
loxrustlib/src/funcs/: callable.rs  clockfunc.rs  loxfunc.rs  mod.rs
loxrustlib/tests/: parser-tests.rs  scanner-tests.rs
loxrustlib_vm/: Cargo.toml
loxrustlib_vm/src/: chunk.rs  opcode.rs  value.rs  vm.rs
src/: err.rs  expr.rs  main.rs  parser.rs  scan.rs  token.rs
