[package]
name = "loxrus_workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "loxrust",
    "loxrustlib"
]

[dependencies]
loxrustlib = { path = "./loxrustlib" }

[[bin]]
name = "rlox"
path = "loxrust/src/main.rs"
