[package]
name = "loxrust_workspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    ".",
    "loxrust",
    "loxrustlib",
    "loxrustlib_vm"
]

[dependencies]
loxrustlib = { path = "./loxrustlib" }
loxrustlib_vm = { path = "./loxrustlib_vm" }

[[bin]]
name = "rlox"
path = "loxrust/src/main.rs"
